Rename: Update module path from pai-theme to paitheme
- Updated go.mod module path to github.com/fredricnet/paitheme
- Updated theme.toml with new repository URLs
- Updated all documentation files with new module path
- Updated demo site configuration
- Updated consuming websites (fredric.net, performance-website)

This change prepares the theme for the new GitHub repository.

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,6 @@ _vendor/
 # Demo site build output
 examples/demo/public/
 examples/demo/resources/_gen/
+
+# Local development TODO (not for GitHub)
+TODO_LOCAL.md
