--- a/examples/demo/data/site.yaml
+++ b/examples/demo/data/site.yaml
@@ -31,7 +31,7 @@ footer:
   
   social:
     - platform: "github"
-      url: "https://github.com/fredricnet/pai-theme"
+      url: "https://github.com/fredricnet/paitheme"
       icon: "github"
   
   copyright:
@@ -46,12 +46,12 @@ schema:
   organization:
     name: "PAI Theme"
     description: "A modern, dark-mode Hugo theme"
-    url: "https://github.com/fredricnet/pai-theme"
-    logo: "https://github.com/fredricnet/pai-theme/static/brand/logo.svg"
+    url: "https://github.com/fredricnet/paitheme"
+    logo: "https://github.com/fredricnet/paitheme/static/brand/logo.svg"
   
   website:
     search_enabled: false
   
   default_author:
     name: "PAI Theme"
-    url: "https://github.com/fredricnet/pai-theme"
+    url: "https://github.com/fredricnet/paitheme"
