--- a/examples/demo/hugo.yaml
+++ b/examples/demo/hugo.yaml
@@ -6,10 +6,10 @@ description: 'Demo site showcasing PAI Theme features and capabilities'
 
 module:
   imports:
-    - path: github.com/fredricnet/pai-theme
-      # For local development, use: hugo mod replace github.com/fredricnet/pai-theme => ../..
+    - path: github.com/fredricnet/paitheme
+      # For local development, use: hugo mod replace github.com/fredricnet/paitheme => ../..
   replacements:
-    - github.com/fredricnet/pai-theme => ../..
+    - github.com/fredricnet/paitheme -> ../..
 
 menu:
   main:
